Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-01-08 Gal
 BUG: [ 1597939 ] Rename Edits Wrong Field in Folder Compare List
  Src: DirView.cpp

2007-01-07 Kimmo
 BUG: [ 1567749 ] "Unable to compare files" needs short result
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-01-06 Kimmo
 TODO: [ 1489875 ] Mimimum height for location pane visible area indicator
  Src: LocationView.cpp
 TODO: [ 1485038 ] Rename DIFFITEM::IsSideLeft() and IsSideRight()
  Src: CompareStats.cpp DiffContext.cpp DiffFileData.cpp DiffItem.cpp DiffItem.h
   DirActions.cpp DirDoc.cpp DirScan.cpp DirView.cpp DirViewColHandler.cpp
   DirViewColItems.cpp
 PATCH: [ 1567773 ] Change "Only in xxxxxxxxxx" to "Right Only: xxxxxxxxxx"
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 ConvertFilter() function in FileOrFolderSelect can be a static function
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h

2007-01-05 Kimmo
 PATCH: [ 1628203 ] Reduce options caching in MergeEditView
  Src: MergeEditView.cpp MergeEditView.h
 PATCH: [ 1628299 ] Use OptionsMgr for archive options
  Src: 7zCommon.cpp
 PATCH: [ 1628263 ] Add debug-menuitem for resetting options
  Src: MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-01-04 Kimmo
 PATCH: [ 1625344 ] Move OptionsMgr from MainFrame to MergeApp
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h Merge.cpp Merge.h
   OptionsInit.cpp PropRegistry.cpp PropTextColors.cpp SourceControl.cpp
  Src/Common: OptionsMgr.h
 Use Empty() method for CString instead of assigning empty string into it
  Src/Common: varprop.h

2006-12-31 Kimmo
 PATCH: [ 1625022 ] Constify OptionsManager parameters
  Src/Common: OptionsMgr.cpp OptionsMgr.h

2006-12-30 Kimmo
 PATCH: [ 1623772 ] Constify PathContext parameter strings
  Src: PathContext.cpp PathContext.h

2006-12-21 WinMerge experimental release 2.7.1.4 (SVN revision 3991)
